Se agrega Interfaz de Otra Moneda a Peso y Peso a OtraMoneda con Lógica

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/ConversorMonedas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-20220320.jar=C:\\Users\\Dafne Gonz\u00e1lez Vera\\Downloads\\prueba\\json-20220320.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.json-20220320.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
